Fix navbar on small devices

--- a/assets/css/ud-styles.css
+++ b/assets/css/ud-styles.css
@@ -450,20 +450,20 @@ p {
   }
 }
 
-.navbar-btn .ud-main-btn {
+.navbar-button .ud-main-btn {
   padding: 8px 16px;
   background: transparent;
 }
 
-.navbar-btn .ud-login-btn:hover {
+.navbar-button .ud-login-btn:hover {
   opacity: 0.5;
 }
 
-.navbar-btn .ud-white-btn {
+.navbar-button .ud-white-btn {
   background: rgba(255, 255, 255, 0.2);
 }
 
-.navbar-btn .ud-white-btn:hover {
+.navbar-button .ud-white-btn:hover {
   background: white;
   color: var(--heading-color);
 }
@@ -2610,4 +2610,20 @@ p {
     padding: 10px 20px;
   }
 }
+
+/* phone fix */
+
+@media (max-width: 767px)
+{
+    .sm-hidden
+    {
+        display: none !important;
+        opacity: 0 !important;
+    } 
+    .sm-show {
+        display: inline-block !important;
+        opacity: 1 !important;
+    }
+}
+
 /*# sourceMappingURL=ud-styles.css.map */
